--- a/app/build.gradle
+++ b/app/build.gradle
@@ -7,8 +7,8 @@ apply plugin: 'kotlin-android-extensions'
 android {
     compileSdkVersion 28
     defaultConfig {
-        applicationId "com.arthurivanets.sharedpreferenceshandler"
-        minSdkVersion 15
+        applicationId "com.arthurivanets.sharedpreferencesdemo"
+        minSdkVersion 18
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -25,12 +25,12 @@ android {
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     apply plugin: 'kotlin-android'
-    implementation "androidx.appcompat:appcompat:1.0.0-rc02"
-    implementation "androidx.constraintlayout:constraintlayout:1.1.0"
-    implementation "androidx.lifecycle:lifecycle-extensions:2.0.0-rc01"
+    implementation "androidx.appcompat:appcompat:1.0.0"
+    implementation "androidx.constraintlayout:constraintlayout:1.1.3"
+    implementation "androidx.lifecycle:lifecycle-extensions:2.0.0"
     testImplementation "junit:junit:4.12"
-    androidTestImplementation "androidx.test:runner:1.1.0-alpha4"
-    androidTestImplementation "androidx.test.espresso:espresso-core:3.1.0-alpha4"
+    androidTestImplementation "androidx.test:runner:1.1.0-beta01"
+    androidTestImplementation "androidx.test.espresso:espresso-core:3.1.0-beta01"
     implementation project(path: ":sharedpreferenceshandler")
     implementation project(path: ":sharedpreferenceshandler-ktx")
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
