--- a/sharedpreferenceshandler-ktx/build.gradle
+++ b/sharedpreferenceshandler-ktx/build.gradle
@@ -2,13 +2,13 @@ apply plugin: 'com.android.library'
 apply plugin: 'kotlin-android'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion rootProject.compileSdk
 
     defaultConfig {
-        minSdkVersion 15
-        targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion rootProject.minSdk
+        targetSdkVersion rootProject.targetSdk
+        versionCode rootProject.releaseVersionCode
+        versionName rootProject.releaseVersion
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
@@ -24,13 +24,24 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "androidx.appcompat:appcompat:1.0.0-rc02"
-    testImplementation "junit:junit:4.12"
-    androidTestImplementation "androidx.test:runner:1.1.0-alpha4"
-    androidTestImplementation "androidx.test.espresso:espresso-core:3.1.0-alpha4"
     implementation "org.jetbrains.kotlin:kotlin-stdlib-jdk7:$kotlin_version"
+    implementation "androidx.appcompat:appcompat:${rootProject.supportLibraryVersion}"
+    testImplementation "junit:junit:${rootProject.jUnitVersion}"
+    androidTestImplementation "androidx.test:runner:${rootProject.testRunnerVersion}"
+    androidTestImplementation "androidx.test.espresso:espresso-core:${rootProject.espressoVersion}"
     implementation project(":sharedpreferenceshandler")
 }
+
 repositories {
     mavenCentral()
 }
+
+ext {
+    releaseArtifact = "sharedpreferenceshandler-ktx"
+    releaseDescription = ""
+}
+
+project.archivesBaseName = "sharedpreferenceshandler-ktx"
+
+apply from: "../common/constants.gradle"
+apply from: '../gradle/script/publish.gradle'
