--- a/sharedpreferenceshandler/build.gradle
+++ b/sharedpreferenceshandler/build.gradle
@@ -1,13 +1,13 @@
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 28
+    compileSdkVersion rootProject.compileSdk
 
     defaultConfig {
-        minSdkVersion 15
-        targetSdkVersion 28
-        versionCode 1
-        versionName "1.0"
+        minSdkVersion rootProject.minSdk
+        targetSdkVersion rootProject.targetSdk
+        versionCode rootProject.releaseVersionCode
+        versionName rootProject.releaseVersion
 
         testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
 
@@ -23,10 +23,19 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation "androidx.appcompat:appcompat:1.0.0-rc02"
-    testImplementation "junit:junit:4.12"
-    androidTestImplementation "androidx.test:runner:1.1.0-alpha4"
-    androidTestImplementation "androidx.test.espresso:espresso-core:3.1.0-alpha4"
-
-    implementation "org.apache.commons:commons-lang3:3.7"
+    implementation "androidx.appcompat:appcompat:${rootProject.supportLibraryVersion}"
+    implementation "org.apache.commons:commons-lang3:${rootProject.apacheCommonsVersion}"
+    testImplementation "junit:junit:${rootProject.jUnitVersion}"
+    androidTestImplementation "androidx.test:runner:${rootProject.testRunnerVersion}"
+    androidTestImplementation "androidx.test.espresso:espresso-core:${rootProject.espressoVersion}"
 }
+
+ext {
+    releaseArtifact = "sharedpreferenceshandler"
+    releaseDescription = ""
+}
+
+project.archivesBaseName = "sharedpreferenceshandler"
+
+apply from: "../common/constants.gradle"
+apply from: '../gradle/script/publish.gradle'
